--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
-        table 
+        table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
@@ -56,6 +56,10 @@
             white-space: pre-wrap; 
             overflow-wrap: break-word; 
         }
+        #statusMessage {
+            margin-top: 10px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -74,10 +78,13 @@
     </div>
     <button id="copyTemplate">Скопировать текст шаблона</button>
 
+    <div id="statusMessage"></div> <!-- Блок для статуса отправки -->
+
     <h2>Список клиентов</h2>
     <table id="clientTable">
         <thead>
             <tr>
+                <th>Выбрать</th> <!-- Новый столбец для чекбоксов -->
                 <th>#</th>
                 <th>ФИО</th>
                 <th>Номер телефона</th>
@@ -95,6 +102,7 @@
         const form = document.getElementById('clientForm');
         const tableBody = document.querySelector('#clientTable tbody');
         const templateOutput = document.getElementById('templateOutput');
+        const statusMessage = document.getElementById('statusMessage');
         const companyPhone = "18129392655"; 
         const telegramToken = '7840125369:AAH6xDS0673mmimBxIx6JR69oxj1x8Rx77g'; // Замените на ваш токен
         const chatId = '8110257277'; // Замените на ваш Telegram ID
@@ -110,6 +118,7 @@
             const row = document.createElement('tr');
             row.setAttribute('data-id', id);
             row.innerHTML = `
+                <td><input type="checkbox" class="client-checkbox" data-id="${id}"></td>
                 <td>${index}</td>
                 <td>${name}</td>
                 <td>${phone}</td>
@@ -121,4 +130,102 @@
                 deleteClient(id);
             });
 
- 
+            row.addEventListener('click', () => {
+                updateTemplate(index);
+            });
+        };
+
+        const deleteClient = (id) => {
+            let clients = JSON.parse(localStorage.getItem('clients')) || [];
+            clients.splice(id, 1);
+            localStorage.setItem('clients', JSON.stringify(clients));
+            reloadTable();
+        };
+
+        const reloadTable = () => {
+            tableBody.innerHTML = '';
+            const clients = JSON.parse(localStorage.getItem('clients')) || [];
+            clients.forEach((client, index) => {
+                addRowToTable(index + 1, client.name, client.phone, index);
+            });
+        };
+
+        const updateTemplate = (id) => {
+            const template = `LuxCargo/${id}\n${companyPhone}\n新疆维吾尔自治区乌鲁木齐市天山区 新疆乌鲁木齐天山区大湾北路西域轻工基地A区87号库 LuxCargo/${id}`;
+            templateOutput.innerText = template;
+        };
+
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+
+            const clients = JSON.parse(localStorage.getItem('clients')) || [];
+            clients.push({ name, phone });
+            localStorage.setItem('clients', JSON.stringify(clients));
+
+            reloadTable();
+            updateTemplate(clients.length);
+            form.reset();
+        });
+
+        document.getElementById('copyTemplate').addEventListener('click', () => {
+            const templateText = templateOutput.innerText;
+            if (templateText) {
+                const textarea = document.createElement('textarea');
+                textarea.value = templateText;
+                document.body.appendChild(textarea);
+                textarea.select();
+                document.execCommand('copy');
+                document.body.removeChild(textarea);
+                alert('Текст шаблона скопирован в буфер обмена');
+            } else {
+                alert('Шаблон пуст. Сначала выберите клиента.');
+            }
+        });
+
+        document.getElementById('sendTelegram').addEventListener('click', () => {
+            const checkboxes = document.querySelectorAll('.client-checkbox:checked');
+            if (checkboxes.length === 0) {
+                statusMessage.innerText = 'Выберите хотя бы одного клиента для отправки.';
+                return;
+            }
+
+            let messages = [];
+            checkboxes.forEach((checkbox) => {
+                const clientId = checkbox.getAttribute('data-id');
+                const clients = JSON.parse(localStorage.getItem('clients')) || [];
+                const client = clients[clientId];
+                messages.push(`Клиент #${parseInt(clientId) + 1}\nФИО: ${client.name}\nТелефон: ${client.phone}`);
+            });
+
+            sendTelegramMessage(messages.join('\n\n'));
+        });
+
+        const sendTelegramMessage = (message) => {
+            fetch(`https://api.telegram.org/bot${telegramToken}/sendMessage`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    chat_id: chatId,
+                    text: message,
+                }),
+            }).then(response => {
+                if (response.ok) {
+                    statusMessage.innerText = 'Сообщение успешно отправлено!';
+                } else {
+                    statusMessage.innerText = 'Ошибка при отправке сообщения.';
+                    console.error('Ошибка при отправке сообщения:', response.statusText);
+                }
+            }).catch(error => {
+                statusMessage.innerText = 'Ошибка сети.';
+                console.error('Ошибка сети:', error);
+            });
+        };
+
+        loadClients();
+    </script>
+</body>
+    </html>
