--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         };
 
         const updateTemplate = (id) => {
-            const template = `LuxCargo/${id}\n${companyPhone}\n新疆维吾尔自治区乌鲁木齐市天山区 新疆乌鲁木齐天山区大湾北路西域轻工基地A区87号库 LuxCargo/${id}`;
+            const template = `LuxCargo/${id}\n18599782515\n新疆维吾尔自治区乌鲁木齐市天山区 新疆乌鲁木齐天山区大湾北路西域轻工基地A区87号库 LuxCargo/${id}`;
             templateOutput.innerText = template;
         };
 
