--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         const templateOutput = document.getElementById('templateOutput');
         const statusMessage = document.getElementById('statusMessage');
         const companyPhone = "18599782515"; 
+        templateOutput.innerText = template;
         const telegramToken = '7840125369:AAH6xDS0673mmimBxIx6JR69oxj1x8Rx77g'; // Замените на ваш токен
         const chatId = '8110257277'; // Замените на ваш Telegram ID
 
